--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "nodemon backend/server.js",
+      "dev": "nodemon server.js",
       "build":"npm install && npm install --prefix Frontend && npm run build --prefix Frontend",
-      "start":"nodemon backend/server.js"
+      "start":"nodemon server.js"
 
   },
   "keywords": [],
