--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://9606kishor_db_user:Vpvoh765BhNmXGoN@clusterglam.usjrqqh.mongodb.net/?appName=Clusterglam
+MONGO_URI=cd 
 PORT=5000
