--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Backend",
+  "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "type":"module",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
       "dev": "nodemon server.js",
       "build":"npm install && npm install --prefix Frontend && npm run build --prefix Frontend",
-      "start":"nodemon server.js"
+      "start":"node server.js"
 
   },
   "keywords": [],
